<resources>
    <string name="app_name">CampaignTracker</string>

    <string name="start_turn">Start Turn</string>
    <string name="heal">Heal</string>
    <string name="take_damage">Take Damage</string>
    <string name="save">Save</string>
    <string name="damage_taken">Damage Taken:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="full_sheet">Full Sheet</string>
    <string name="inventory">Inventory</string>
    <string name="attacks">Attacks</string>
    <string name="log">Log</string>
    <string name="switch_game">Switch Game</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="also_placeholder">Also Placeholder</string>
    <string name="item_name">Name:</string>
    <string name="description">Description:</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="points">Points:</string>
    <string name="subtract_xp">Subtract XP</string>
    <string name="add_xp">Add XP</string>
    <string name="edit_xp">Edit Xp</string>
    <string name="level">Level:</string>
    <string name="name">Name:</string>
    <string name="label">Label:</string>
    <string name="background">Background:</string>
    <string name="race">Race:</string>
    <string name="armor_class">ARMOR CLASS</string>
    <string name="personality">Personality:</string>
    <string name="max_health">Max Health:</string>
    <string name="experience_to_level">Experience to Level:</string>
    <string name="title_activity_edit_playable_character">EditPlayableCharacterActivity</string>
    <string name="basics">Basics</string>
    <string name="stats">Stats</string>
    <string name="traits">Traits</string>
    <string name="new_character">New Character</string>
    <string name="edit_character">Edit Character</string>
    <string name="quantity">Quantity:</string>
    <string name="initiative">INITIATIVE</string>
    <string name="speed">SPEED</string>
    <string name="proficiency_bonus">Proficiency Bonus</string>
    <string name="strength">STRENGTH</string>
    <string name="dexterity">DEXTERITY</string>
    <string name="constitution">CONSTITUTION</string>
    <string name="intelligence">INTELLIGENCE</string>
    <string name="wisdom">WISDOM</string>
    <string name="charisma">CHARISMA</string>
    <string name="acrobatics">ACROBATICS</string>
    <string name="animal_handling">ANIMAL HANDLING</string>

    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="copper">Copper</string>
    <string name="electrum">Electrum</string>
    <string name="platinum">Platinum</string>
    <string name="arcana">ARCANA</string>
    <string name="athletics">ATHLETICS</string>
    <string name="deception">DECEPTION</string>
    <string name="history">HISTORY</string>
    <string name="insight">INSIGHT</string>
    <string name="intimidation">INTIMIDATION</string>
    <string name="investigation">INVESTIGATION</string>
    <string name="current_xp">Current XP</string>
    <string name="alignment">Alignment</string>
    <string name="amount">Amount:</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="remove_item">Remove Item</string>
    <string name="favorite_star">Favorite Star</string>

    <string-array name="coin_types">
        <item>Gold</item>
        <item>Silver</item>
        <item>Copper</item>
        <item>Electrum</item>
        <item>Platinum</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inspiration">Inspiration</string>
    <string name="medicine">MEDICINE</string>
    <string name="nature">NATURE</string>
    <string name="perception">PERCEPTION</string>
    <string name="performance">PERFORMANCE</string>
    <string name="persuasion">PERSUASION</string>
    <string name="religion">RELIGION</string>
    <string name="sleight">SLEIGHT OF HAND</string>
    <string name="survival">SURVIVAL</string>
    <string name="stealth">STEALTH</string>
    <string name="success">SUCCESS</string>
    <string name="failures">FAILURES</string>
    <string name="death_saves">DEATH SAVES</string>
    <string name="total">TOTAL</string>
    <string name="hit_dice">HIT DICE</string>
    <string name="flaws">FLAWS</string>
    <string name="bonds">BONDS</string>
    <string name="ideals">IDEALS</string>
    <string name="personality_traits">PERSONALITY TRAITS</string>
    <string name="plus">+</string>
</resources>
