<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_full_sheet"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/full_sheet" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/inventory" />
        <!--<item-->
            <!--android:id="@+id/nav_attacks"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/attacks" />-->
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/log" />
    </group>

    <!--<item android:title="@string/switch_game">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
