<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="playableCharacter"
            type="com.elle.campaigntracker.data.model.PlayableCharacter"/>
        <variable
            name="callback"
            type="com.elle.campaigntracker.view.EditPcBasicsFragment.PlayableCharacterCallback"/>
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.elle.campaigntracker.view.EditPcBasicsFragment">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:labelFor="@+id/editName"
            app:layout_constraintTop_toTopOf="@+id/editName"
            app:layout_constraintBottom_toBottomOf="@+id/editName"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={playableCharacter.name, default=name}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"/>

        <TextView
            android:id="@+id/classLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editLabel"
            android:text="@string/label"
            app:layout_constraintTop_toTopOf="@+id/editLabel"
            app:layout_constraintBottom_toBottomOf="@+id/editLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={playableCharacter.characterClass, default=rouge}"
            app:layout_constraintTop_toBottomOf="@+id/editName"
            app:layout_constraintStart_toEndOf="@+id/classLabel"/>

        <TextView
            android:id="@+id/backgroundLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background"
            android:labelFor="@+id/editBackground"
            app:layout_constraintTop_toTopOf="@+id/editBackground"
            app:layout_constraintBottom_toBottomOf="@+id/editBackground"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={playableCharacter.background, default=background}"
            app:layout_constraintTop_toBottomOf="@+id/editLabel"
            app:layout_constraintStart_toEndOf="@+id/backgroundLabel"/>

        <TextView
            android:id="@+id/raceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race"
            android:labelFor="@+id/editRace"
            app:layout_constraintTop_toTopOf="@+id/editRace"
            app:layout_constraintBottom_toBottomOf="@+id/editRace"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editRace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={playableCharacter.characterRace, default=HUMAN}"
            app:layout_constraintTop_toBottomOf="@+id/editBackground"
            app:layout_constraintStart_toEndOf="@+id/raceLabel"/>

        <TextView
            android:id="@+id/alignmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alignment"
            android:labelFor="@+id/editAlignment"
            app:layout_constraintTop_toTopOf="@+id/editAlignment"
            app:layout_constraintBottom_toBottomOf="@+id/editAlignment"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/editAlignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectedItemPosition="@={playableCharacter.alignment}"
            app:layout_constraintTop_toBottomOf="@+id/editRace"
            app:layout_constraintStart_toEndOf="@+id/alignmentLabel"/>

        <TextView
            android:id="@+id/maxHpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_health"
            android:labelFor="@+id/editMaxHp"
            app:layout_constraintTop_toTopOf="@+id/editMaxHp"
            app:layout_constraintBottom_toBottomOf="@+id/editMaxHp"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editMaxHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:intToText="@={playableCharacter.maxHp}"
            app:layout_constraintTop_toBottomOf="@+id/editAlignment"
            app:layout_constraintStart_toEndOf="@+id/maxHpLabel"/>

        <TextView
            android:id="@+id/xpToLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experience_to_level"
            android:labelFor="@+id/editXpToLevel"
            app:layout_constraintTop_toTopOf="@+id/editXpToLevel"
            app:layout_constraintBottom_toBottomOf="@+id/editXpToLevel"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editXpToLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:intToText="@={playableCharacter.totalXpToLevel}"
            app:layout_constraintTop_toBottomOf="@+id/editMaxHp"
            app:layout_constraintStart_toEndOf="@+id/xpToLevelLabel"/>

        <TextView
            android:id="@+id/currentXpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_xp"
            android:labelFor="@+id/editCurrentXp"
            app:layout_constraintTop_toTopOf="@+id/editCurrentXp"
            app:layout_constraintBottom_toBottomOf="@+id/editCurrentXp"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editCurrentXp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:intToText="@={playableCharacter.currentXp}"
            app:layout_constraintTop_toBottomOf="@+id/editXpToLevel"
            app:layout_constraintStart_toEndOf="@+id/currentXpLabel"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{() -> callback.onSave(playableCharacter)}"
            app:layout_constraintTop_toBottomOf="@+id/editXpToLevel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>