<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="character"
            type="com.elle.campaigntracker.data.model.PlayableCharacter"/>
    </data>
    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.elle.campaigntracker.view.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/char_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@{character.name, default=name}"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"/>
        <!--class-->
        <!--level-->
        <!--xp-->

        <ProgressBar
            android:id="@+id/hp_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:progressTint="#0c9607"
            android:min="0"
            android:max="@{character.maxHp, default=100}"
            android:progress="@{character.currentHp, default=100}"
            app:layout_constraintTop_toBottomOf="@+id/char_name"/>

        <Button
            android:id="@+id/take_damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_damage"
            app:layout_constraintTop_toBottomOf="@+id/hp_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/heal"/>

        <Button
            android:id="@+id/heal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hp_bar"
            app:layout_constraintStart_toEndOf="@+id/take_damage"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/heal" />

        <!-- skills/saving throws -->

        <Button
            android:id="@+id/start_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_turn"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>
