<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="character"
            type="com.elle.campaigntracker.data.character.PlayerCharacter"/>
        <variable
            name="handler"
            type="com.elle.campaigntracker.MainActivity.Handler"/>
    </data>
    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.elle.campaigntracker.MainActivity">

        <TextView
            android:id="@+id/char_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@{character.characterName, default=Name}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/char_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@{character.characterClass, default=Class}"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/char_name"/>
        <TextView
            android:id="@+id/char_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@{String.valueOf(character.level), default=1}"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toBottomOf="@+id/char_class"
            app:layout_constraintStart_toEndOf="@+id/char_name"/>
        <!--xp-->
        <ProgressBar
            android:id="@+id/xp_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:progressTint="#0c96aa"
            android:min="0"
            android:max="@{character.totalXpToLevel, default=100}"
            android:progress="@{character.currentXp, default=0}"
            app:layout_constraintTop_toTopOf="@+id/char_level"
            app:layout_constraintBottom_toBottomOf="@+id/char_level"
            app:layout_constraintStart_toEndOf="@+id/char_level"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/hp_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:progressTint="#0c9607"
            android:min="0"
            android:max="@{character.maxHp, default=100}"
            android:progress="@{character.currentHp, default=100}"
            app:layout_constraintTop_toBottomOf="@+id/char_name"/>

        <Button
            android:id="@+id/take_damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_damage"
            app:layout_constraintTop_toBottomOf="@+id/hp_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/heal"
            android:onClick="@{() -> handler.updateHealth(false)}"/>

        <Button
            android:id="@+id/heal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hp_bar"
            app:layout_constraintStart_toEndOf="@+id/take_damage"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/heal"
            android:onClick="@{() -> handler.updateHealth(true)}"/>

        <!-- skills/saving throws -->

        <Button
            android:id="@+id/start_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_turn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> handler.startTurn(character)}"/>
    </android.support.constraint.ConstraintLayout>
</layout>
